--- a/calculator/calc.html
+++ b/calculator/calc.html
@@ -9,7 +9,9 @@
 
 <body>
    <section class="calc">
+
     <div class="container">
+        <h1>Calculator</h1>
         <input type="text" name="" id="">
         <section>
             <button>1</button>
